approach for fixing speccycle and switching between multiple worlds